# CellularAutomataArt

./: AditiveBiCAS.py  CMakeLists.txt  CellularAutomata.cpp  CellularAutomata.h  Chromosome.cpp  Chromosome.h  Evolution.cpp  Evolution.h  Makefile  NumberGenerator.cpp  NumberGenerator.h  README.md  main.cpp  params.h
bicas/: BiCAS.py  BiCAS.py.new  LICENSE  ca.cas  ca.run  ca.tab  caEND.cas  test.REMOVED.git-id
bicas/celkomDobre/: ca1.info  ca2.info  ca2.tab  ca3.info  ca3.tab
